# sync

./: .gitignore  Cargo.toml  flake.nix  index.html  sync.md
playground/: index.html
pusher_playground/: .env  Cargo.toml
pusher_playground/src/: main.rs
src/: edits.rs  main.rs
sync-lambda/: Cargo.toml  README.md
sync-lambda/src/: http_handler.rs
