[package]
name = "counter"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
hex = "0.4.3"
iced.features = ["webgl", "fira-sans"]
iced.version = "*"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
tink-core = "0.3.0"
tink-signature = "0.3.0"

[dev-dependencies]
iced_test = "*"
