[package]
name = "counter"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
iced.features = ["webgl", "fira-sans"]
iced.version = "*"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
tink-aead = "0.3.0"
tink-core = "0.3.0"
tink-signature = "0.3.0"
getrandom = { version = "^0.2.8", features = ["js"] }

[dev-dependencies]
iced_test = "*"
